--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -446,4 +446,5 @@
     <string name="nc_dialog_invalid_password">Invalid password</string>
     <string name="nc_dialog_reauth_or_delete">Do you want to reauthorize or delete this account?</string>
     <string name="nc_description_record_voice">Record voice</string>
+    <string name="nc_voice_message_slide_to_cancel">&lt;&lt; Slide to cancel</string>
 </resources>
