--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -385,6 +385,10 @@
     <!-- voice messages -->
     <string name="nc_voice_message_filename">Talk recording from %1$s (%2$s)</string>
     <string name="nc_voice_message_hold_to_record_info">Hold to record, release to send.</string>
+    <string name="nc_description_record_voice">Record voice</string>
+    <string name="nc_voice_message_slide_to_cancel">&lt;&lt; Slide to cancel</string>
+    <string name="play_voice_message">Play voice message</string>
+    <string name="pause_voice_message">Pause voice message</string>
 
     <!-- Phonebook Integration -->
     <string name="nc_settings_phone_book_integration_key" translatable="false">phone_book_integration</string>
@@ -445,6 +449,4 @@
     <string name="filename_progress">%1$s (%2$d)</string>
     <string name="nc_dialog_invalid_password">Invalid password</string>
     <string name="nc_dialog_reauth_or_delete">Do you want to reauthorize or delete this account?</string>
-    <string name="nc_description_record_voice">Record voice</string>
-    <string name="nc_voice_message_slide_to_cancel">&lt;&lt; Slide to cancel</string>
 </resources>
