--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -189,6 +189,8 @@
     <string name="nc_add_to_favorites">Add to favorites</string>
     <string name="nc_remove_from_favorites">Remove from favorites</string>
 
+    <string name="nc_forward_to_three_dots">Forward to …</string>
+
     <!-- Contacts -->
     <string name="nc_select_participants">Select participants</string>
     <string name="nc_add_participants">Add participants</string>
@@ -357,6 +359,7 @@
 
     <!-- Chat -->
     <string name="nc_copy_message">Copy</string>
+    <string name="nc_forward_message">Forward</string>
     <string name="nc_reply">Reply</string>
     <string name="nc_reply_privately">Reply privately</string>
     <string name="nc_delete_message">Delete</string>
