Unify strings for clearing chat over all platforms
See: #1336

Signed-off-by: Tim Krüger <t@timkrueger.me>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -167,9 +167,9 @@
     <string name="nc_start_conversation">Start a conversation</string>
     <string name="nc_configure_room">Configure conversation</string>
     <string name="nc_leave">Leave conversation</string>
-    <string name="nc_clear_history">Clear history</string>
-    <string name="nc_clear_history_warning">The chat history will be deleted.</string>
-    <string name="nc_clear_history_success">Chat history was cleared</string>
+    <string name="nc_clear_history">Delete all messages</string>
+    <string name="nc_clear_history_warning">Do you really want to delete all messages in this conversation?</string>
+    <string name="nc_clear_history_success">All messages were deleted</string>
     <string name="nc_rename">Rename conversation</string>
     <string name="nc_set_password">Set a password</string>
     <string name="nc_change_password">Change password</string>
@@ -180,6 +180,7 @@
     <string name="nc_make_call_private">Make conversation private</string>
     <string name="nc_delete_call">Delete conversation</string>
     <string name="nc_delete">Delete</string>
+    <string name="nc_delete_all">Delete all</string>
     <string name="nc_delete_conversation_more">If you delete the conversation, it will also be deleted for all other participants.</string>
 
     <string name="nc_new_conversation">New conversation</string>
