--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -265,7 +265,7 @@
     <string name="nc_attendee_pin">Pin: %1$s</string>
 
     <!-- Conversations List-->
-    <string name="nc_new_mention">More mentions</string>
+    <string name="nc_new_mention">Unread mentions</string>
 
     <!-- Chat -->
     <string name="nc_hint_enter_a_message">Enter a message…</string>
