add share contact entry to bottomSheet
replace butterknife with viewbinding

Signed-off-by: Marcel Hibbe <dev@mhibbe.de>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -394,6 +394,7 @@
 
     <!-- location sharing -->
     <string name="nc_share_location">Share location</string>
+    <string name="nc_share_contact">Share contact</string>
     <string name="nc_location_permission_required">location permission is required</string>
     <string name="nc_share_current_location">Share current location</string>
     <string name="nc_share_this_location">Share this location</string>
