--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -389,7 +389,7 @@
     <!-- Upload -->
     <string name="nc_add_file">Add to conversation</string>
     <string name="nc_upload_local_file">Upload local file</string>
-    <string name="nc_upload_picture_from_cam">Upload from camera</string>
+    <string name="nc_upload_picture_from_cam">Take photo</string>
     <string name="nc_upload_from_cloud">Share from %1$s</string>
     <string name="nc_upload_failed">Sorry, upload failed</string>
     <string name="nc_upload_choose_local_files">Choose files</string>
@@ -476,7 +476,9 @@
 
     <string name="take_photo">Take a photo</string>
     <string name="take_photo_switch_camera">Switch camera</string>
+    <string name="take_photo_retake_photo">Re-take photo</string>
     <string name="take_photo_toggle_torch">Toggle torch</string>
+    <string name="take_photo_send">Send</string>
     <string name="take_photo_error_deleting_picture">Error taking picture</string>
     <string name="take_photo_permission">Taking a photo is not possible without permissions</string>
 </resources>
